# CelesEngine

./: .gitignore  CMakeLists.txt  CelesEngine.sln  Elucidator.sln  LICENSE.txt  README.md
CelesEditor/: CelesEditor.vcxproj  CelesEditor.vcxproj.filters
CelesEngine/: CMakeLists.txt  CelesEngine.vcxproj  CelesEngine.vcxproj.filters
CelesEngine/Dependencies/spdlog/include/: common.h  logger-inl.h  logger.h  pattern_formatter-inl.h
CelesEngine/Dependencies/spdlog/include/details/: backtracer.h  console_globals.h  fmt_helper.h  log_msg-inl.h  log_msg_buffer.h  os-inl.h  os.h  registry-inl.h  registry.h
CelesEngine/Dependencies/spdlog/include/fmt/: fmt.h  ostr.h
CelesEngine/Dependencies/spdlog/include/sinks/: ansicolor_sink-inl.h  sink-inl.h  sink.h  stdout_color_sinks-inl.h  stdout_color_sinks.h  wincolor_sink-inl.h  wincolor_sink.h
CelesEngine/Dependencies/stb_image/: stb_image.h
CelesEngine/src/: CMakeLists.txt  Celes.h  PCH.h
CelesEngine/src/Box2D/src/collision/: b2_broad_phase.cpp  b2_chain_shape.cpp  b2_circle_shape.cpp  b2_collide_circle.cpp  b2_collide_edge.cpp  b2_collide_polygon.cpp  b2_collision.cpp  b2_distance.cpp  b2_dynamic_tree.cpp  b2_edge_shape.cpp  b2_polygon_shape.cpp  b2_time_of_impact.cpp
CelesEngine/src/Box2D/src/common/: b2_block_allocator.cpp  b2_draw.cpp  b2_math.cpp  b2_settings.cpp  b2_stack_allocator.cpp  b2_timer.cpp
CelesEngine/src/Box2D/src/dynamics/: b2_body.cpp  b2_chain_circle_contact.cpp  b2_chain_polygon_contact.cpp  b2_circle_contact.cpp  b2_contact.cpp  b2_contact_manager.cpp  b2_contact_solver.cpp  b2_distance_joint.cpp  b2_edge_circle_contact.cpp  b2_edge_polygon_contact.cpp  b2_fixture.cpp  b2_friction_joint.cpp  b2_gear_joint.cpp  b2_island.cpp  b2_joint.cpp  b2_motor_joint.cpp  b2_mouse_joint.cpp  b2_polygon_circle_contact.cpp  b2_polygon_contact.cpp  b2_prismatic_joint.cpp  b2_pulley_joint.cpp  b2_revolute_joint.cpp  b2_weld_joint.cpp  b2_wheel_joint.cpp  b2_world.cpp  b2_world_callbacks.cpp
CelesEngine/src/Box2D/src/rope/: b2_rope.cpp
CelesEngine/src/Celes/: Application.cpp  Application.h  Core.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
CelesEngine/src/Celes/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
CelesEngine/src/Celes/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
CelesEngine/src/Celes/GUI/: GUILayer.cpp  GUILayer.h
CelesEngine/src/Celes/Math/: Math.cpp  Math.h
CelesEngine/src/Celes/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  EditorCamera.cpp  EditorCamera.h  Light.cpp  Light.h  RenderContext.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
CelesEngine/src/Celes/Scene/: Entity.cpp  Entity.h  EntityComponent.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h
CelesEngine/src/Celes/Utils/: PlatformUtils.h  Timer.cpp  Timer.h
CelesEngine/src/ImGui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
CelesEngine/src/ImGuizmo/: GraphEditor.cpp  GraphEditor.h  ImCurveEdit.cpp  ImCurveEdit.h  ImGradient.cpp  ImGuizmo.cpp  ImGuizmo.h  ImSequencer.cpp
CelesEngine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLCommand.cpp  OpenGLCommand.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
CelesEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
CelesEngine/src/Platform/macOS/: MacOSInput.cpp  MacOSUtils.mm  MacOSWindow.cpp  MacOSWindow.h
CelesEngine/src/yaml-cpp/include/yaml-cpp/: emitfromevents.h  eventhandler.h
CelesEngine/src/yaml-cpp/include/yaml-cpp/contrib/: graphbuilder.h
CelesEngine/src/yaml-cpp/include/yaml-cpp/node/: convert.h  impl.h  iterator.h
CelesEngine/src/yaml-cpp/include/yaml-cpp/node/detail/: iterator.h  iterator_fwd.h  memory.h  node.h  node_data.h  node_iterator.h  node_ref.h
CelesEngine/src/yaml-cpp/src/: binary.cpp  convert.cpp  depthguard.cpp  directives.cpp  emit.cpp  emitfromevents.cpp  emitter.cpp  emitterstate.cpp  emitterstate.h  emitterutils.cpp  emitterutils.h  exceptions.cpp  exp.cpp  indentation.h  memory.cpp  node.cpp  node_data.cpp  nodebuilder.cpp  nodebuilder.h  nodeevents.cpp  nodeevents.h  null.cpp  ostream_wrapper.cpp  parse.cpp  parser.cpp  regex_yaml.cpp  regex_yaml.h  scanner.cpp  scanner.h  scanscalar.cpp  scantag.cpp  scantoken.cpp  setting.h  simplekey.cpp  singledocparser.cpp  singledocparser.h  stream.cpp  stream.h  streamcharsource.h  tag.cpp  (+1 more)
CelesEngine/src/yaml-cpp/src/contrib/: graphbuilder.cpp  graphbuilderadapter.cpp  graphbuilderadapter.h
Elucidator/: Elucidator.vcxproj  Elucidator.vcxproj.filters  imgui.ini
Glamoth/: CMakeLists.txt  DefaultUILayout.ini  Glamoth.vcxproj  Glamoth.vcxproj.filters
Glamoth/assets/scenes/: 2DPhysics.celes  3DExample.celes  Example.celes
Glamoth/assets/shaders/: FlatColor.vert.glsl  HiDepth.comp.glsl  PBR.frag.glsl  PBR.vert.glsl  Phong.frag.glsl  Phong.vert.glsl  Renderer2D_Circle.frag.glsl  Renderer2D_Circle.vert.glsl  Renderer2D_Line.frag.glsl  Renderer2D_Line.vert.glsl  Renderer2D_Quad.frag.glsl  SSGI.frag.glsl  Shadow.frag.glsl  Shadow.vert.glsl  TestFragmentShader.glsl  TestVertexShader.glsl
Glamoth/src/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  Glamoth.cpp
Glamoth/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters
scripts/: CheckGLEW.py  CheckGLFW.py  CheckPython.py  CheckVulkan.py  Setup.command  Setup.py  Setup.sh  Setup_VS2022.bat  Utils.py
(+71 files in other folders)
